--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.73MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.08MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-348.7KB/s(Youtube:不良林), server: 85.208.108.20, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇯🇵 日本-3.54MB/s(Youtube:不良林), server: 85.208.108.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇨🇦 加拿大-1.27MB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-3.25MB/s(Youtube:不良林), server: 85.208.108.20, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇺🇸 美国-488.1KB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-2.01MB/s(Youtube:不良林), server: 72.140.224.195, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.89MB/s(Youtube:不良林), server: 72.140.224.195, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-2.79MB/s(Youtube:不良林), server: sg-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-02.licom.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.31MB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-2.23MB/s(Youtube:不良林), server: 72.140.224.195, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇳 中国-369.1KB/s(Youtube:不良林), server: cn01.downloadmovie.cn, port: 65015, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn01.downloadmovie.cn}}
   - {name: 🇨🇳 中国-362.8KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-929.0KB/s(Youtube:不良林), server: 5.188.0.151, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.05MB/s(Youtube:不良林), server: 5.188.0.151, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.73MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-348.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-488.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.79MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.31MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-369.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-362.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-929.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.73MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-348.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-488.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.79MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.31MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-369.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-362.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-929.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.73MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-348.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-488.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.79MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.31MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-369.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-362.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-929.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.73MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-348.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-488.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.79MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.31MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-369.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-362.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-929.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.73MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-348.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-488.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.79MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.31MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-369.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-362.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-929.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.73MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-348.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-488.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.79MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.31MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-369.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-362.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-929.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.73MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-348.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-488.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.89MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.79MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.31MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-369.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-362.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-929.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
