--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-348.7KB/s(Youtube:不良林), server: 85.208.108.20, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇯🇵 日本-3.54MB/s(Youtube:不良林), server: 85.208.108.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇨🇦 加拿大-1.27MB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-2.79MB/s(Youtube:不良林), server: sg-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-02.licom.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.31MB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-2.23MB/s(Youtube:不良林), server: 72.140.224.195, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-2.01MB/s(Youtube:不良林), server: 72.140.224.195, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.55MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-279.8KB/s(Youtube:不良林), server: ingress-i2.iivvppnn.info, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i2.iivvppnn.info}}
+  - {name: 🇨🇳 中国-179.1KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-1.31MB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-2.14MB/s(Youtube:不良林), server: 72.140.224.195, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇳 中国-369.1KB/s(Youtube:不良林), server: cn01.downloadmovie.cn, port: 65015, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn01.downloadmovie.cn}}
   - {name: 🇨🇳 中国-362.8KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
   - {name: 🇺🇸 美国-929.0KB/s(Youtube:不良林), server: 5.188.0.151, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-348.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.79MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.23MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-279.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-179.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-369.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-362.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-929.0KB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-348.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.79MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.23MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-279.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-179.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-369.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-362.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-929.0KB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-348.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.79MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.23MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-279.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-179.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-369.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-362.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-929.0KB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-348.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.79MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.23MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-279.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-179.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-369.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-362.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-929.0KB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-348.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.79MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.23MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-279.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-179.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-369.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-362.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-929.0KB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-348.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.79MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.23MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-279.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-179.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-369.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-362.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-929.0KB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-348.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.79MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.23MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-279.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-179.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-369.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-362.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-929.0KB/s(Youtube:不良林)
