--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-2.01MB/s(Youtube:不良林), server: 72.140.224.195, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.55MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-279.8KB/s(Youtube:不良林), server: ingress-i2.iivvppnn.info, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i2.iivvppnn.info}}
-  - {name: 🇨🇳 中国-179.1KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-800.2KB/s(Youtube:不良林), server: 5.188.0.151, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-501.6KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65089, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
   - {name: 🇺🇸 美国-1.31MB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-2.14MB/s(Youtube:不良林), server: 72.140.224.195, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-369.1KB/s(Youtube:不良林), server: cn01.downloadmovie.cn, port: 65015, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-362.8KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-929.0KB/s(Youtube:不良林), server: 5.188.0.151, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-1.05MB/s(Youtube:不良林), server: 5.188.0.151, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.64MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-160.9KB/s(Youtube:不良林), server: ingress-i2.iivvppnn.info, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i2.iivvppnn.info}}
+  - {name: 🇨🇳 中国-413.5KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇰🇷 韩国-701.9KB/s(Youtube:不良林), server: chess.magicefire.com, port: 443, type: vmess, uuid: 9aa80017-3427-4165-a522-f5f9a11330d0, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-328.2KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-312.0KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-407.5KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-279.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-179.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-800.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-501.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-369.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-362.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-929.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-160.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-413.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-701.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-328.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-312.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-407.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-279.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-179.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-800.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-501.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-369.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-362.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-929.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-160.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-413.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-701.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-328.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-312.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-407.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-279.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-179.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-800.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-501.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-369.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-362.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-929.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-160.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-413.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-701.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-328.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-312.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-407.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-312.0KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-279.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-179.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-800.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-501.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-369.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-362.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-929.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-160.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-413.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-701.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-328.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-312.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-407.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-279.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-179.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-800.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-501.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-369.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-362.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-929.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-160.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-413.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-701.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-328.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-312.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-407.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-279.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-179.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-800.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-501.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-369.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-362.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-929.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-160.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-413.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-701.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-328.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-312.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-407.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-279.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-179.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-800.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-501.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-369.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-362.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-929.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-160.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-413.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-701.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-328.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-312.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-407.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
